infra/local/common/tools.yml
apiVersion: v1
kind: Pod
metadata:
  name: tools
spec:
  containers:
    - name: vegeta
      image: peterevans/vegeta:6.9.1
      command: ["/bin/sh", "-c"]
      args: ["tail -f /dev/null"]
    - name: swiss-army-knife
      image: leodotcloud/swiss-army-knife:v0.10
      command: ["tail"]
      args: ["-f", "/dev/null"]
