infra/local/common/vegeta.yml
apiVersion: v1
kind: Pod
metadata:
  name: vegeta
spec:
  containers:
     - name: vegeta
       image: peterevans/vegeta:6.9.1
       command: ["/bin/sh", "-c"]
       args: ["tail -f /dev/null"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vegeta
spec:
  selector:
    matchLabels:
      name: vegeta
  template:
    metadata:
      labels:
        name: vegeta
    spec:
      containers:
        - name: vegeta
          image: peterevans/vegeta:6.9.1
          command: ["/bin/sh", "-c"]
          args: ["echo \"GET http://echo\" | vegeta attack -duration=0 -rate=1 | vegeta encode"]
      tolerations:
        - key: dedicated
          operator: Exists
          effect: NoSchedule
