infra/local/common/downstream-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: downstream
  labels:
    app: downstream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: downstream
  template:
    metadata:
      labels:
        app: downstream
    spec:
      containers:
      - name: downstream
        image: nevimjakymamid/downstream-service-dominik
#        image:  hashicorp/http-echo:0.2.3
#        args: 
#          - -text=Doms downstream
#          - -listen=:80
        ports:
        - containerPort: 3333
---
kind: Service
apiVersion: v1
metadata:
  name: downstream
spec:
  selector:
    app: downstream
  ports:
  # Default port used by the image
  - port: 3333
    name: http

# Istio 
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: downstream-gateway
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: downstream-service-ingress
spec:
  hosts: 
  - '*'
  gateways:
  - downstream-gateway
  http:
  - match:
    - uri:
        prefix: "/downstream"
    route:
    - destination:
        host: downstream
