infra/local/common/istio-external-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google
  namespace: istio-system
spec:
  hosts:
  - google.com
  - www.google.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: aws-lambbda
  namespace: istio-system
spec:
  hosts:
  - 1yaq2zrc91.execute-api.eu-central-1.amazonaws.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: aws-lambda
spec:
  hosts:
  - 1yaq2zrc91.execute-api.eu-central-1.amazonaws.com
  http:
  - route:
    - destination:
        host: 1yaq2zrc91.execute-api.eu-central-1.amazonaws.com
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin-ext
spec:
  hosts:
  - httpbin.org
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
