infra/local/common/ts-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts
  labels:
    app: ts
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ts
  template:
    metadata:
      labels:
        app: ts
    spec:
      containers:
      - name: echo
        image:  dicker:ts
        imagePullPolicy: Never
        ports:
        - containerPort: 2020
---
kind: Service
apiVersion: v1
metadata:
  name: ts
spec:
  selector:
    app: ts
  ports:
  # Default port used by the image
  - port: 2020
    name: http

# Istio 
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ts-gateway
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 2020
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ts-service-ingress
spec:
  hosts: 
  - '*'
  gateways:
  - ts-gateway
  http:
  - match:
    - uri:
        prefix: "/ts"
    route:
    - destination:
        host: ts
